# agent-kernel

./: .coverage.claude.pid4961.XtbwwW1x.HuK7RqhpyRah  .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
configs/: example_policy.yaml  permissive_policy.yaml  restrictive_policy.yaml
demo/: README.md  __init__.py
demo/backend/: __init__.py  app.py  runtime.py
demo/frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
demo/frontend/src/: App.tsx  index.css  main.tsx  styles.css
demo/frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  (+10 more)
demo/frontend/src/hooks/: useEventStream.ts  useLogs.ts  useResizeObserver.ts  useScenarioRun.ts  useWorld.ts
demo/frontend/src/lib/: api.ts  format.ts  policyMatch.ts  types.ts
docs/: README.md  agent-kernel-workbench-demo.md  mkdocs.yml
docs/assets/: architecture.html
docs/landing/: index.html
docs/landing/assets/: hero-loop.webm  walkthrough.en.vtt  walkthrough.webm
docs/landing/assets/scenarios/: db-cleanup.json  http-egress.json  mcp-search.json
docs/post/v0.4.3/linkedin/: post.md
docs/post/v0.4.3/x/: figure.html  post.md
docs/post/v0.4.3/xiaohongshu/: figure.html  post.md
docs/research/design/v0/: Kernel_Design_v0.md
docs/research/design/v1/: Kernel_Design_v1.md
docs/research/design/v2/: Kernel_Design_v2.md
docs/research/design/v2.1/: Kernel_Design_v2.1.md
docs/research/design/v2.2/: Kernel_Design_v2.2.md
docs/research/experiments/: TEMPLATE.md
docs/research/plans/: 2026-03-27-kernel-native-agent-loop.md  2026-03-28-design-implementation-audit-and-fixes.md
docs/research/references/: agent-frameworks.md
docs/user/: changelog.md  index.md
docs/user/api/: index.md
docs/user/getting-started/: installation.md  quickstart.md
docs/user/guides/: index.md
examples/: README.md  _common.py
examples/01_basic_kernel/: all_status_codes.py  allowed_vs_denied.py  audit_log_inspection.py  hello_kernel.py
examples/02_policy/: constraint_policy.py  glob_matching.py  inline_policy.py  yaml_policy.py
examples/03_agent_loop/: agent_denied_action.py  file_analyst.py  minimal_agent.py  multi_tool_agent.py  run_agent_loop_convenience.py
examples/04_reversible/: delete_and_rollback.py  new_file_rollback.py  snapshot_expiry.py  write_and_rollback.py
examples/05_providers/: filesystem_ops.py  http_get.py  http_post.py  process_exec.py
examples/06_multi_provider/: agent_with_all_providers.py  fetch_and_save.py
examples/07_custom_provider/: echo_provider.py  kv_store_provider.py
examples/08_advanced/: agent_with_reversible.py  audit_log_analysis.py  custom_target_from.py  programmatic_policy.py
scripts/: demo_kernel.py  e2e_agent_demo.py  perf_test.py
src/agent_os_kernel/: __init__.py  __main__.py  agent_loop.py  config.py  kernel.py  log.py  models.py  policy.py  reversible.py  utils.py
src/agent_os_kernel/providers/: __init__.py  base.py  filesystem.py  http.py  mcp.py  process.py
tests/: conftest.py  test_agent_loop.py  test_cli.py  test_config.py  test_e2e.py  test_e2e_openai.py  test_kernel.py  test_log.py  test_mcp.py  test_mcp_real.py  test_models.py  test_policy.py  test_providers.py  test_reversible.py  test_utils.py  test_workbench_demo.py
tests/fixtures/: test_policy.yaml
(+28 files in other folders)
