[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-os-kernel"
version = "0.4.2"
description = "A Python AI/ML project"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "litellm>=1.40",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing -q"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["agent_os_kernel"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["numpy.*", "torch.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["agent_os_kernel.utils"]
warn_unused_ignores = false

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
