[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-kernel"
version = "0.4.2"
description = "A security boundary for LLM agents — policy, audit, and rollback for every tool call"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "litellm>=1.40",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
    "build>=1.0",
    "twine>=5.0",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://github.com/JiahaoZhang-Public/agent-kernel"
Repository = "https://github.com/JiahaoZhang-Public/agent-kernel"
Documentation = "https://github.com/JiahaoZhang-Public/agent-kernel#readme"
Changelog = "https://github.com/JiahaoZhang-Public/agent-kernel/blob/main/docs/user/changelog.md"

[project.scripts]
agent-kernel = "agent_os_kernel.__main__:main"

[tool.hatch.build.targets.sdist]
exclude = [
    "docs/research/",
    "docs/site/",
    "docs/user/",
    "docs/mkdocs.yml",
    "scripts/",
    "tests/",
    "examples/",
    ".github/",
    ".claude/",
    ".pre-commit-config.yaml",
    "logo.png",
    "uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_os_kernel"]

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing -q"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["agent_os_kernel"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["numpy.*", "torch.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["agent_os_kernel.utils"]
warn_unused_ignores = false

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
